fix imports and requirements

--- a/src/assignment.ipynb
+++ b/src/assignment.ipynb
@@ -53,7 +53,31 @@
    "id": "cell-3",
    "metadata": {},
    "outputs": [],
-   "source": "# Importing required packages here\nimport matplotlib.pyplot as plt\nimport numpy as np\nimport xarray as xr\nimport os\nimport netCDF4\nimport cartopy.crs as ccrs\nimport cartopy.feature as cfeature\n\n# Optional: cmocean for better ocean color scales\ntry:\n    import cmocean\n    print(\"✓ cmocean available for better ocean color scales\")\nexcept ImportError:\n    print(\"⚠️  cmocean not available - using matplotlib defaults\")\n\nfrom matplotlib.ticker import ScalarFormatter\nfrom modules.bathymetry import *"
+   "source": [
+    "# Importing required packages here\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import xarray as xr\n",
+    "import os\n",
+    "import netCDF4\n",
+    "import cartopy.crs as ccrs\n",
+    "import cartopy.feature as cfeature\n",
+    "\n",
+    "# Optional: cmocean for better ocean color scales\n",
+    "try:\n",
+    "    import cmocean\n",
+    "    print(\"✓ cmocean available for better ocean color scales\")\n",
+    "except ImportError:\n",
+    "    print(\"⚠️  cmocean not available - using matplotlib defaults\")\n",
+    "\n",
+    "from matplotlib.ticker import ScalarFormatter\n",
+    "\n",
+    "# Import modules from the local modules directory\n",
+    "# The notebook is in src/, so modules is at ../modules/\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from modules import *"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,7 +93,21 @@
    "id": "cell-5",
    "metadata": {},
    "outputs": [],
-   "source": "# Set paths relative to the current notebook location\ndatadir = '../data/'\n\n# YOUR CODE HERE\n# Output file paths for figures (DO NOT CHANGE THIS PATH)\n# The autograder expects figures to be saved in '../figures/'\nfigdir = '../figures/'\nraise NotImplementedError()\n\n# Create figures directory if it doesn't exist\nif not os.path.exists(figdir):\n    os.makedirs(figdir)\n    \nprint(f\"Figures will be saved to: {figdir}\")\nprint(f\"Data directory: {datadir}\")"
+   "source": [
+    "# Set paths relative to the current notebook location\n",
+    "datadir = '../data/'\n",
+    "\n",
+    "# Output file paths for figures (DO NOT CHANGE THIS PATH)\n",
+    "# The autograder expects figures to be saved in '../figures/'\n",
+    "figdir = '../figures/'\n",
+    "\n",
+    "# Create figures directory if it doesn't exist\n",
+    "if not os.path.exists(figdir):\n",
+    "    os.makedirs(figdir)\n",
+    "    \n",
+    "print(f\"Figures will be saved to: {figdir}\")\n",
+    "print(f\"Data directory: {datadir}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -77,13 +115,24 @@
    "id": "cell-6",
    "metadata": {},
    "outputs": [],
-   "source": "# Test that setup is complete\nassert 'figdir' in locals(), \"figdir variable not defined\"\nassert figdir.endswith('/'), \"figdir should end with '/'\"\n# Note: datadir will be created by download function, so we don't test for existence here\nassert 'datadir' in locals(), \"datadir variable not defined\"\nprint(\"✓ File setup test passed!\")"
+   "source": [
+    "# Test that setup is complete\n",
+    "assert 'figdir' in locals(), \"figdir variable not defined\"\n",
+    "assert figdir.endswith('/'), \"figdir should end with '/'\"\n",
+    "# Note: datadir will be created by download function, so we don't test for existence here\n",
+    "assert 'datadir' in locals(), \"datadir variable not defined\"\n",
+    "print(\"✓ File setup test passed!\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "cell-7",
    "metadata": {},
-   "source": "## Load the Bathymetry Data\n\nWe'll load real bathymetry data from the provided NetCDF file, which contains a subset of ETOPO bathymetry data for the North Atlantic region."
+   "source": [
+    "## Load the Bathymetry Data\n",
+    "\n",
+    "We'll load real bathymetry data from the provided NetCDF file, which contains a subset of ETOPO bathymetry data for the North Atlantic region."
+   ]
   },
   {
    "cell_type": "code",
@@ -91,7 +140,16 @@
    "id": "cell-8",
    "metadata": {},
    "outputs": [],
-   "source": "# YOUR CODE HERE\n# Load the bathymetry subset data from the NetCDF file\n# Use xr.open_dataset() to load the bathymetry_subset.nc file from the data directory\n# The dataset should contain latitude, longitude, and depth (z) variables\nraise NotImplementedError()\n\n# Print information about the dataset\nprint(bathymetry_subset)"
+   "source": [
+    "# YOUR CODE HERE\n",
+    "# Load the bathymetry subset data from the NetCDF file\n",
+    "# Use xr.open_dataset() to load the bathymetry_subset.nc file from the data directory\n",
+    "# The dataset should contain latitude, longitude, and depth (z) variables\n",
+    "raise NotImplementedError()\n",
+    "\n",
+    "# Print information about the dataset\n",
+    "print(bathymetry_subset)"
+   ]
   },
   {
    "cell_type": "code",
@@ -111,24 +169,70 @@
   {
    "cell_type": "markdown",
    "id": "jqo0e7l1nk",
-   "source": "## Writing Your First Function\n\nNow that we have loaded the bathymetry data, let's learn to write a **function**! Functions are reusable pieces of code that take inputs, do something useful, and return results.\n\nWe'll write a function to extract the water depth at any location. This will be useful for finding depths at specific points like the DS2 mooring location.",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Writing Your First Function\n",
+    "\n",
+    "Now that we have loaded the bathymetry data, let's learn to write a **function**! Functions are reusable pieces of code that take inputs, do something useful, and return results.\n",
+    "\n",
+    "We'll write a function to extract the water depth at any location. This will be useful for finding depths at specific points like the DS2 mooring location."
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ww0fqj1xek",
-   "source": "# YOUR CODE HERE\n# Write a function to extract water depth at a specific location\ndef get_depth_at_location(bathymetry_dataset, target_lat, target_lon):\n    \"\"\"\n    Extract water depth at a specific location.\n    \n    Parameters:\n    - bathymetry_dataset: xarray Dataset with lat, lon, z variables\n    - target_lat: Target latitude (degrees North)  \n    - target_lon: Target longitude (degrees East, negative for West)\n    \n    Returns:\n    - depth: Water depth at location (meters, negative below sea level)\n    \"\"\"\n    # HINT: Use bathymetry_dataset.z.sel(lat=target_lat, lon=target_lon, method='nearest')\n    # This finds the nearest grid point to your target location\n    # Then extract the single depth value using .values or .item()\n    raise NotImplementedError()\n\n# Test your function with the DS2 mooring location\nds2_latitude = 66.0128\nds2_longitude = -27.270200\n\n# Call your function to get the depth at DS2 mooring\nds2_depth = get_depth_at_location(bathymetry_subset, ds2_latitude, ds2_longitude)\nprint(f\"Water depth at DS2 mooring ({ds2_latitude}°N, {ds2_longitude}°E): {ds2_depth:.1f} m\")",
    "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "# Write a function to extract water depth at a specific location\n",
+    "def get_depth_at_location(bathymetry_dataset, target_lat, target_lon):\n",
+    "    \"\"\"\n",
+    "    Extract water depth at a specific location.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - bathymetry_dataset: xarray Dataset with lat, lon, z variables\n",
+    "    - target_lat: Target latitude (degrees North)  \n",
+    "    - target_lon: Target longitude (degrees East, negative for West)\n",
+    "    \n",
+    "    Returns:\n",
+    "    - depth: Water depth at location (meters, negative below sea level)\n",
+    "    \"\"\"\n",
+    "    # HINT: Use bathymetry_dataset.z.sel(lat=target_lat, lon=target_lon, method='nearest')\n",
+    "    # This finds the nearest grid point to your target location\n",
+    "    # Then extract the single depth value using .values or .item()\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "# Test your function with the DS2 mooring location\n",
+    "ds2_latitude = 66.0128\n",
+    "ds2_longitude = -27.270200\n",
+    "\n",
+    "# Call your function to get the depth at DS2 mooring\n",
+    "ds2_depth = get_depth_at_location(bathymetry_subset, ds2_latitude, ds2_longitude)\n",
+    "print(f\"Water depth at DS2 mooring ({ds2_latitude}°N, {ds2_longitude}°E): {ds2_depth:.1f} m\")"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "hexpkw08ay",
-   "source": "# Test that your function works correctly\nassert 'get_depth_at_location' in locals(), \"Function get_depth_at_location not defined\"\nassert callable(get_depth_at_location), \"get_depth_at_location should be a function\"\n\n# Test that the function returns a reasonable depth value\ntest_depth = get_depth_at_location(bathymetry_subset, 64.5, -30.0)\nassert isinstance(test_depth, (int, float)), \"Function should return a number\"\nassert test_depth < 0, \"Ocean depths should be negative (below sea level)\"\nassert test_depth > -5000, \"Depth seems unreasonably deep\"\n\nprint(\"✓ Function test passed!\")\nprint(f\"✓ DS2 depth: {ds2_depth:.1f} m\")",
-   "metadata": {},
    "execution_count": null,
-   "outputs": []
+   "id": "hexpkw08ay",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test that your function works correctly\n",
+    "assert 'get_depth_at_location' in locals(), \"Function get_depth_at_location not defined\"\n",
+    "assert callable(get_depth_at_location), \"get_depth_at_location should be a function\"\n",
+    "\n",
+    "# Test that the function returns a reasonable depth value\n",
+    "test_depth = get_depth_at_location(bathymetry_subset, 64.5, -30.0)\n",
+    "assert isinstance(test_depth, (int, float)), \"Function should return a number\"\n",
+    "assert test_depth < 0, \"Ocean depths should be negative (below sea level)\"\n",
+    "assert test_depth > -5000, \"Depth seems unreasonably deep\"\n",
+    "\n",
+    "print(\"✓ Function test passed!\")\n",
+    "print(f\"✓ DS2 depth: {ds2_depth:.1f} m\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +300,23 @@
    "id": "cell-14",
    "metadata": {},
    "outputs": [],
-   "source": "# YOUR CODE HERE\n# Create an enhanced cartopy map with the following features:\n# 1. Use appropriate figure size (16cm x 26cm converted to inches)\n# 2. Add DS2 mooring location (66.0128°N, -27.270200°W) as a circle\n# 3. Add legend for the mooring\n# 4. Use better colormap (cmocean.cm.deep if available, otherwise plt.cm.Blues_r)\n# 5. Turn off latitude labels on the right side\n# 6. Find and mark the deepest point with a square (HINT: use your get_depth_at_location function!)\n# 7. Add proper title and styling\nraise NotImplementedError()\n\n# Save the figure\n# IMPORTANT: Change 'YourName' to your actual last name\nplt.savefig(figdir + 'ex2fig3-YourName-Messfern.png', dpi=150, bbox_inches='tight')\nplt.show()"
+   "source": [
+    "# YOUR CODE HERE\n",
+    "# Create an enhanced cartopy map with the following features:\n",
+    "# 1. Use appropriate figure size (16cm x 26cm converted to inches)\n",
+    "# 2. Add DS2 mooring location (66.0128°N, -27.270200°W) as a circle\n",
+    "# 3. Add legend for the mooring\n",
+    "# 4. Use better colormap (cmocean.cm.deep if available, otherwise plt.cm.Blues_r)\n",
+    "# 5. Turn off latitude labels on the right side\n",
+    "# 6. Find and mark the deepest point with a square (HINT: use your get_depth_at_location function!)\n",
+    "# 7. Add proper title and styling\n",
+    "raise NotImplementedError()\n",
+    "\n",
+    "# Save the figure\n",
+    "# IMPORTANT: Change 'YourName' to your actual last name\n",
+    "plt.savefig(figdir + 'ex2fig2-YourName-Messfern.png', dpi=150, bbox_inches='tight')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,16 +458,7 @@
     "- Applied appropriate color scales for oceanographic data\n",
     "- Analyzed bathymetric patterns and oceanographic features\n",
     "\n",
-    "This exercise demonstrates essential skills for visualizing and interpreting bathymetric data in oceanographic research.\n",
-    "\n",
-    "**Total Points: 18**\n",
-    "- Student information: 1 point\n",
-    "- File setup: 1 point\n",
-    "- Data creation: 2 points\n",
-    "- Figure 1 (matplotlib map): 3 points\n",
-    "- Figure 2 (basic cartopy map): 3 points\n",
-    "- Figure 3 (enhanced cartopy map): 5 points\n",
-    "- Analysis questions: 3 points"
+    "This exercise demonstrates essential skills for visualizing bathymetric data in oceanographic research.\n"
    ]
   }
  ],
