--- a/src/assignment.ipynb
+++ b/src/assignment.ipynb
@@ -18,7 +18,7 @@
     "Three figures should be generated:\n",
     "- ex2fig1-YourName-Messfern.png: (matplotlib) Map of bathymetry\n",
     "- ex2fig2-YourName-Messfern.png: (cartopy) Second map of bathymetry\n",
-    "- ex2fig3-YourName-Messfern.png: (cartopy) Create a map with your own region\n",
+    "- ex2fig3-YourName-Messfern.png: (cartopy) Enhanced cartopy map\n",
     "\n",
     "**Required Packages:** You will need `netCDF4`, `cartopy`, and optionally `cmocean` for better color scales.\n",
     "\n",
@@ -142,8 +142,15 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "# Load the bathymetry subset data from the NetCDF file\n",
-    "# Use xr.open_dataset() to load the bathymetry_subset.nc file from the data directory\n",
+    "# Load the bathymetry subset data from the NetCDF file.\n",
+    "# Use the `get_bathymetry_subset_from_url()` function from the bathymetry module to download\n",
+    "# the bathymetry_subset.nc file if it does not already exist in the data directory.  The output of this\n",
+    "# function is the path to the downloaded NetCDF file, which you can call `bathymetry_file_path`.\n",
+    "\n",
+    "\n",
+    "# Use xr.open_dataset() to load the bathymetry_subset.nc file from the data directory.  Use the input to\n",
+    "# xr.open_dataset() as the path to the bathymetry_subset.nc file obtained from the previous step.  Name the \n",
+    "# data variable `bathymetry_subset`.\n",
     "# The dataset should contain latitude, longitude, and depth (z) variables\n",
     "raise NotImplementedError()\n",
     "\n",
@@ -200,9 +207,15 @@
     "    - depth: Water depth at location (meters, negative below sea level)\n",
     "    \"\"\"\n",
     "    # HINT: Use bathymetry_dataset.z.sel(lat=target_lat, lon=target_lon, method='nearest')\n",
-    "    # This finds the nearest grid point to your target location\n",
-    "    # Then extract the single depth value using .values or .item()\n",
+    "    # This finds the nearest grid point to your target location.  Call it `depth_value`\n",
     "    raise NotImplementedError()\n",
+    "\n",
+    "    # Then extract the single depth value using .values or .item()\n",
+    "    # Extract the single value (handle both scalar and array returns)\n",
+    "    if hasattr(depth_value, 'item'):\n",
+    "        return depth_value.item()\n",
+    "    else:\n",
+    "        return float(depth_value.values)\n",
     "\n",
     "# Test your function with the DS2 mooring location\n",
     "ds2_latitude = 66.0128\n",
@@ -256,17 +269,42 @@
     "lons = bathymetry_subset.lon.values\n",
     "bathymetry = bathymetry_subset.z.values\n",
     "\n",
+    "# Use plt.figure() to create a figure with appropriate size (10, 8)\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "\n",
+    "# Create meaningful depth contours at 500m intervals\n",
+    "depth_levels = np.arange(-4000, 1000, 500)  # From -4000m to 0m in 500m steps\n",
+    "\n",
+    "# Choose appropriate colormap\n",
+    "cmap = 'viridis'\n",
+    "\n",
     "# YOUR CODE HERE\n",
     "# Create a contour plot using matplotlib\n",
-    "# Use plt.figure() to create a figure with appropriate size (10, 8)\n",
     "# Use plt.contourf() to create filled contours\n",
-    "# Add colorbar, labels, title, and grid\n",
-    "# Use 'viridis' colormap or a better ocean colormap if cmocean is available\n",
     "raise NotImplementedError()\n",
+    "\n",
+    "\n",
+    "# Add colorbar, labels, title, and grid\n",
+    "\n",
+    "# Add colorbar\n",
+    "cbar = plt.colorbar(contour)\n",
+    "cbar.set_label('Depth (m)', fontsize=12)\n",
+    "\n",
+    "# Add labels and title\n",
+    "plt.xlabel('Longitude', fontsize=12)\n",
+    "plt.ylabel('Latitude', fontsize=12)\n",
+    "plt.title('North Atlantic Bathymetry Map', fontsize=14)\n",
+    "\n",
+    "# Add grid\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "# Format axes\n",
+    "plt.xticks(fontsize=10)\n",
+    "plt.yticks(fontsize=10)\n",
     "\n",
     "# Save the figure\n",
     "# IMPORTANT: Change 'YourName' to your actual last name\n",
-    "plt.savefig(figdir + 'ex2fig1-YourName-Messfern.png')\n",
+    "plt.savefig(figdir + 'ex2fig1-YourName-Messfern.png', dpi=150, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -291,7 +329,9 @@
    "id": "cell-13",
    "metadata": {},
    "source": [
-    "### Plot a Map using Cartopy"
+    "### Plot a Map using Cartopy\n",
+    "\n",
+    "See how the example code uses the cartopy capability to choose a Mercator projection."
    ]
   },
   {
@@ -301,16 +341,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define geographic extent\n",
+    "min_lon, max_lon = lons.min(), lons.max()\n",
+    "min_lat, max_lat = lats.min(), lats.max()\n",
+    "\n",
+    "# Set up with a Mercator projection\n",
+    "fig, ax = plt.subplots(figsize=(12, 10), subplot_kw={'projection': ccrs.Mercator()})\n",
+    "\n",
+    "# Add coastlines and gridlines\n",
+    "ax.coastlines(resolution='50m', color='black', linewidth=0.8)\n",
+    "gl = ax.gridlines(draw_labels=True, alpha=0.5)\n",
+    "gl.top_labels = True\n",
+    "gl.right_labels = True\n",
+    "\n",
+    "# Set the extent\n",
+    "ax.set_extent([min_lon, max_lon, min_lat, max_lat], crs=ccrs.PlateCarree())\n",
+    "\n",
+    "\n",
+    "\n",
     "# YOUR CODE HERE\n",
     "# Create an enhanced cartopy map with the following features:\n",
-    "# 1. Use appropriate figure size (16cm x 26cm converted to inches)\n",
-    "# 2. Add DS2 mooring location (66.0128°N, -27.270200°W) as a circle\n",
-    "# 3. Add legend for the mooring\n",
-    "# 4. Use better colormap (cmocean.cm.deep if available, otherwise plt.cm.Blues_r)\n",
-    "# 5. Turn off latitude labels on the right side\n",
-    "# 6. Find and mark the deepest point with a square (HINT: use your get_depth_at_location function!)\n",
-    "# 7. Add proper title and styling\n",
+    "# 1. Pick depth levels with an interval of 500m (depth_levels)\n",
+    "# 2. Use better colormap (cmap=cmocean.cm.deep if available, otherwise `Blues` or `Blues_r`)\n",
+    "# 3. Turn off latitude labels on the right side (edit the code above)\n",
+    "# 4. Label the colorbar with Depth (m)\n",
+    "# 5. Add a title to specify that this used \"Mercator Projection\"\n",
     "raise NotImplementedError()\n",
+    "\n",
+    "contour = ax.contourf(lons, lats, bathymetry, levels=depth_levels, \n",
+    "                     cmap=cmap, transform=ccrs.PlateCarree())\n",
+    "# Add colorbar\n",
+    "cbar = plt.colorbar(contour, ax=ax, orientation='vertical', \n",
+    "                   pad=0.05, aspect=20, shrink=0.5)\n",
     "\n",
     "# Save the figure\n",
     "# IMPORTANT: Change 'YourName' to your actual last name\n",
@@ -358,21 +420,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define DS2 mooring location\n",
+    "ds2_lat = 66.0128\n",
+    "ds2_lon = -27.270200\n",
+    "\n",
+    "# Convert cm to inches (16cm x 26cm)\n",
+    "fig_width_inches = 16 / 2.54\n",
+    "fig_height_inches = 26 / 2.54\n",
+    "\n",
+    "# Find the deepest point\n",
+    "deepest_idx = np.unravel_index(np.argmin(bathymetry), bathymetry.shape)\n",
+    "deepest_lat = lats[deepest_idx[0]]\n",
+    "deepest_lon = lons[deepest_idx[1]]\n",
+    "deepest_depth = bathymetry[deepest_idx]\n",
+    "\n",
     "# YOUR CODE HERE\n",
     "# Create an enhanced cartopy map with the following features:\n",
     "# 1. Use appropriate figure size (16cm x 26cm converted to inches)\n",
     "# 2. Add DS2 mooring location (66.0128°N, -27.270200°W) as a circle\n",
     "# 3. Add legend for the mooring\n",
-    "# 4. Use better colormap (cmocean.cm.deep if available, otherwise plt.cm.Blues_r)\n",
-    "# 5. Turn off latitude labels on the right side\n",
+    "# 4. Use better colormap (as above, cmocean or Blues/Blues_r)\n",
+    "# 5. Turn off latitude labels on the top and right side\n",
     "# 6. Find and mark the deepest point with a square\n",
-    "# 7. Add proper title and styling\n",
     "raise NotImplementedError()\n",
+    "\n",
+    "deepest_plot = ax.plot(deepest_lon, deepest_lat, 'ks', markersize=8, \n",
+    "                      transform=ccrs.PlateCarree(), \n",
+    "                      label=f'Deepest Point ({deepest_depth:.0f} m)',\n",
+    "                      markeredgecolor='white', markeredgewidth=1)\n",
+    "\n",
+    "# Add legend - check options to see what to use for frameon, fancybox, shadow\n",
+    "ax.legend(loc='lower right', frameon=..., fancybox=..., shadow=...)\n",
+    "\n",
+    "\n",
+    "# Adjust layout for better appearance\n",
+    "plt.tight_layout()\n",
     "\n",
     "# Save the figure\n",
     "# IMPORTANT: Change 'YourName' to your actual last name\n",
     "plt.savefig(figdir + 'ex2fig3-YourName-Messfern.png', dpi=150, bbox_inches='tight')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "print(f\"Deepest point found at: {deepest_lat:.3f}°N, {deepest_lon:.3f}°W\")\n",
+    "print(f\"Depth: {deepest_depth:.1f} m\")"
    ]
   },
   {
@@ -422,43 +513,6 @@
     "# Test that analysis questions were answered\n",
     "# This is a placeholder test - manual grading required for analysis questions\n",
     "print(\"✓ Analysis questions section present - manual grading required\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cell-21",
-   "metadata": {},
-   "source": [
-    "## Instructions for Real Bathymetry Data (Optional)\n",
-    "\n",
-    "If you want to work with real bathymetry data:\n",
-    "\n",
-    "1. Navigate to the [ETOPO bathymetry](https://www.ncei.noaa.gov/products/etopo-global-relief-model) website\n",
-    "2. Launch the grid extract tool\n",
-    "3. Choose the ETOPO_2022 dataset (Bedrock; 60 arcseconds)\n",
-    "4. Select your area of interest, for example: 66°N, 63°N, 35°W (-35) and 25°W (-25)\n",
-    "5. Download the data file to your local machine\n",
-    "6. Save the downloaded file to the data directory as `ETOPO_2022_bathymetry.nc`\n",
-    "7. Load and use this real data instead of the synthetic data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cell-22",
-   "metadata": {},
-   "source": [
-    "## Conclusion\n",
-    "\n",
-    "Congratulations! You have successfully completed this bathymetry visualization exercise. You have:\n",
-    "\n",
-    "- Created and worked with bathymetry data using xarray\n",
-    "- Generated contour plots using matplotlib\n",
-    "- Created cartographically accurate maps using cartopy\n",
-    "- Added geographic annotations and features to maps\n",
-    "- Applied appropriate color scales for oceanographic data\n",
-    "- Analyzed bathymetric patterns and oceanographic features\n",
-    "\n",
-    "This exercise demonstrates essential skills for visualizing bathymetric data in oceanographic research.\n"
    ]
   }
  ],
